--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
