--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0-b170201.1204'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    // https://mvnrepository.com/artifact/com.bucket4j/bucket4j-core
+    implementation group: 'com.bucket4j', name: 'bucket4j-core', version: '8.10.1'
 
     runtimeOnly 'org.postgresql:postgresql'
     compileOnly 'org.projectlombok:lombok'
