--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 simpleapi.app.secret=hp12enfbdbc900gf106gf
-simpleapi.app.lifetime=6000000
+simpleapi.app.lifetime=600000
+
+simpleapi.app.frontend-origin="http://localhost:3000"
