--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,14 +1,54 @@
-name: CI
-on: [push]
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 17
-          distribution: 'adopt'
+
+      - name: Кеширование зависимостей Gradle
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle
+
+      - name: Установка прав на выполнение gradlew
+        run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Логин в Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Сборка Docker-образа
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-api .
+
+      - name: Пуш в Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-api
+
+#      - name: Разворачивание на сервере (по SSH)
+#        uses: appleboy/ssh-action@v0.1.10
+#        with:
+#          host: ${{ secrets.SSH_HOST }}
+#          username: ${{ secrets.SSH_USER }}
+#          key: ${{ secrets.SSH_KEY }}
+#          script: |
+#            docker pull ${{ secrets.DOCKER_USERNAME }}/simple-api
+#            docker stop simple_api || true
+#            docker rm simple_api || true
+#            docker run -d -p 8080:8080 --name simple_api ${{ secrets.DOCKER_USERNAME }}/simple-api
