--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,20 +19,6 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Логин в Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Остановка и удаление контейнеров
-        run: docker compose down -v
-
-      - name: Запуск сборки и деплоя
-        run: docker compose up --build -d
-
-      - name: Сборка Docker-образа
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-api .
-      - name: Пуш в Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-api
-
       - name: Кеширование зависимостей Gradle
         uses: actions/cache@v3
         with:
@@ -40,11 +26,23 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-gradle
 
-      - name: Установка прав на выполнение gradlew
-        run: chmod +x gradlew
+      - name: Сборка проекта с Gradle
+        run: ./gradlew build --no-daemon
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Установка Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+      - name: Логин в Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Остановка и удаление старых контейнеров
+        run: docker compose down -v || true
+
+      - name: Запуск контейнеров с пересборкой
+        run: docker compose up --build -d
+
+      - name: Пуш Docker-образа в Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-api
 
 #      - name: Разворачивание на сервере (по SSH)
 #        uses: appleboy/ssh-action@v0.1.10
