--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   db:
-    image: postgres:15
+    image: postgres:17
     container_name: postgres_container
     restart: always
     environment:
@@ -22,6 +22,7 @@ services:
 
   app:
     build: .
+    image: axterium/simpleapi
     container_name: simple_api_container
     depends_on:
       - db
